--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 
 <h1>Doris' new Blog is under construction</h1>
+<p>Due to some accidental issues happened to the website HOST supplier, the orignal Doris' personal website have broken down.
+  Therefore, I am currently reconstructing my personal webiste with a more secure platform, GitHub.
+  Please waiting......</p>
 
 </body>
 </html>
